--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,24 +1,24 @@
 name: ble_ota
 description: Upload firmware over bluetooth.
-version: 1.1.0
+version: 1.1.1
 homepage: https://github.com/vovagorodok/ble_ota
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
-  flutter: ">=1.17.0"
+  flutter: '>=3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  ble_backend: ^1.3.0
-  archive: ^3.6.1
-  meta: ^1.15.0
-  http: ^1.2.2
-  yaml: ^3.1.2
+  ble_backend: ^1.3.1
+  archive: ^4.0.7
+  meta: ^1.16.0
+  http: ^1.5.0
+  yaml: ^3.1.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
+  flutter_lints: ^6.0.0
 
 flutter:
